--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "frontend",
+  "name": "wintermute-frontend",
   "version": "1.0.0",
-  "description": "Frontend for memory system project",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-
-
+  "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@mui/material": "^6.4.0",
-    "@reduxjs/toolkit": "^2.5.0",
-    "@tanstack/react-query": "^5.64.1",
-    "antd": "^5.23.1",
-    "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.7",
-    "react": "^19.0.0",
-    "react-bootstrap": "^2.10.7",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3",
-    "sass": "^1.83.4",
-    "yup": "^1.6.1"
+    "axios": "^1.4.0", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start", 
+    "build": "react-scripts build", 
+    "test": "react-scripts test", 
+    "eject": "react-scripts eject" 
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17"
+    "dotenv": "^16.0.3" 
   }
 }
