--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,8 @@ loguru
 pytest
 pytest-asyncio
 numpy>=1.20
-pydantic>=2.5.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 python-dotenv>=0.20
 click>=8.0
 loguru>=0.5.0 ; sys_platform == 'win32'
